# airbyte-platform

./: .bumpversion.cfg  .dockerignore  .editorconfig  .env  .env.dev  .gitignore  .version  AGENTS.md  CONTRIBUTORS.md  DEPLOYMENTS.md  LICENSE  LICENSE_SHORT  README.md  Tiltfile  airbyte.yml  build.gradle  build.gradle.kts  deps.toml  docker-compose.acceptance-test.yaml  docker-compose.build.yaml  docker-compose.builder.yaml  docker-compose.datadog.yaml  docker-compose.debug.yaml  docker-compose.workloads.yaml  docker-compose.yaml  flags.yml  gradle.properties  otel_metrics.yaml  pmd-rules.xml  settings.gradle  settings.gradle.kts  spotbugs-exclude-filter-file.xml  statsd_metrics.yaml  statsd_v2_metrics.yaml
.github/: labeler.yml  pull_request_template.md
airbyte-analytics/: README.md  build.gradle  build.gradle.kts
airbyte-api/: AGENTS.md  build.gradle  build.gradle.kts  new-build.gradle.kts  readme.md
airbyte-api-server/: Dockerfile  README.md  build.gradle  build.gradle.kts
airbyte-async-profiler/: Dockerfile  build.gradle.kts
airbyte-audit-logging/: build.gradle.kts
airbyte-base-java-image/: Dockerfile  Dockerfile-alpine  README.md  build.gradle.kts  entrypoint.sh
airbyte-base-java-python-image/: Dockerfile  build.gradle.kts
airbyte-base-java-worker-image/: Dockerfile  README.md
airbyte-commons/: build.gradle  (+2 more)
airbyte-manifest-runner/: Dockerfile  README.md  build.gradle.kts  pyproject.toml
airbyte-manifest-runner/app/: main.py
airbyte-manifest-runner/app/routers/: capabilities.py  health.py
airbyte-manifest-runner/tests/: test_capabilities.py
(+14107 files in other folders)
