[project]
name = "manifest-runner"
version = "0.1.0"
description = "A service for running low-code Airbyte connectors"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]
test = [
    "pytest>=8.0.0",
    "httpx>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
